fix: fix code snippet overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,8 +59,8 @@
   }
 }
 
-h3 code {
-  @apply !text-lg md:!text-xl;
+figure[data-rehype-pretty-code-figure] {
+  @apply grid;
 }
 
 pre {
